get in touch changed to get in touch with us

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
           </div>
         </a>
         <div id="siteNav">
-          <h1>Where do you want to go?</h1>
+          <h1>Where do you want to go and enjoy?</h1>
           <ul>
             <li><a href="tours.html" title="Our tours">Tours <br /><span class="tagline">follow our bliss</span></a>
               <ul>
@@ -63,7 +63,7 @@
         </div>
   
         <div id="mainArticle">
-          <h1>Get in touch</h1>
+          <h1>Get in touch with us</h1>
           <img src="assets/images/emerald_bay.jpg" alt="Beautiful Lake Tahoe" class="articleImage" />
           <div class="multiCol">
             <p>If you are on this page, we are guessing you have got something to say! Drop us a line, and be sure to sign up for our newsletter. If you are looking for our seasonal tours,  let us know when you are thinking of taking a trip. Not only will we get back to you with our website exclusive tours (we do not publish these for everyone!), but we will be sure to throw in some cool discounts and tour extras as well.</p>
